--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
-<router-outlet></router-outlet>
+<section>
+  <div class="container">
+    <header>
+      <h2>Search for GitHub Users</h2>
+    </header>
+
+    <app-search-input></app-search-input>
+
+    <router-outlet></router-outlet>
+  </div>
+</section>
