--- a/src/app/components/search-input/search-input.component.html
+++ b/src/app/components/search-input/search-input.component.html
@@ -1,6 +1,6 @@
 <div class="input-group search-wrapper">
   <input #searchFilter class="form-control border-right-0 border" type="text"
-    placeholder="Type a user name here" id="example-search-input" value="{{filter}}">
+    placeholder="Type a user name here" id="example-search-input" [value]="filter">
 
   <span class="input-group-append search-span">
       <div class="input-group-text search-img-wrapper">
