feat: Update main app style and html structure

--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -3,8 +3,8 @@
     <div class="rounded-circle circle"></div>
     <div class="d-flex flex-column">
       <label class="mb-0">{{ item.code }}</label>
-      <small>{{ item.name }} name</small>
+      <label class="subtitle">{{ item.name }}</label>
     </div>
   </div>
-  <small>{{ item.count }} count</small>
+  <small class="subtitle">{{ item.count }}</small>
 </div>
