--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <section>
   <div class="container">
-    <header>
-      <h2>Search for GitHub Users</h2>
-    </header>
+    <h2>{{ title }}</h2>
 
+    <!-- Search input -->
     <app-search-input></app-search-input>
-    
+
+    <!-- Initial result -->
     <div *ngIf="hasRoute('/')"
        class="d-table text-center w-100 mt-5">
-      <img src="assets/img/search.svg"/>
+      <img class="mb-4" src="assets/img/search.svg"/>
       <label class="d-block">Enter a login, name or a company your are looking for.</label>
     </div>
 
