--- a/src/app/search-result/search-result.component.html
+++ b/src/app/search-result/search-result.component.html
@@ -1,21 +1,23 @@
-<ul class="nav nav-tabs" id="myTab" role="tablist">
-  <li class="nav-item" role="presentation">
-    <a class="nav-link active" id="user-tab" data-toggle="tab" href="#user" role="tab" aria-controls="user" aria-selected="true">
-      Users ({{ userData?.total_count }})
-    </a>
-  </li>
-  <li class="nav-item" role="presentation">
-    <a class="nav-link" id="companies-tab" data-toggle="tab" href="#companies" role="tab" aria-controls="companies" aria-selected="false">
-      Companies ({{ companiesData?.total_count }})
-    </a>
-  </li>
-</ul>
+<div class="search-result-wrapper">
+  <ul class="nav nav-tabs" role="tablist">
+    <li class="nav-item" role="presentation">
+      <a class="nav-link active" id="user-tab" data-toggle="tab" href="#user" role="tab" aria-controls="user" aria-selected="true">
+        {{ 'Users' | uppercase }} ({{ userData?.total_count }})
+      </a>
+    </li>
+    <li class="nav-item" role="presentation">
+      <a class="nav-link" id="companies-tab" data-toggle="tab" href="#companies" role="tab" aria-controls="companies" aria-selected="false">
+        {{ 'Companies' | uppercase }} ({{ companiesData?.total_count }})
+      </a>
+    </li>
+  </ul>
 
-<div class="tab-content" id="myTabContent">
-  <div class="tab-pane fade show active" id="user" role="tabpanel" aria-labelledby="user-tab">
-    <app-list column1="Users" column2="Contributions" [data]="userData?.items" ></app-list>
-  </div>
-  <div class="tab-pane fade" id="companies" role="tabpanel" aria-labelledby="companies-tab">
-    <app-list column1="Company" column2="People" [data]="companiesData?.items" ></app-list>
+  <div class="tab-content">
+    <div class="tab-pane fade show active" id="user" role="tabpanel" aria-labelledby="user-tab">
+      <app-list type="users" column1="Users" column2="Contributions" [data]="userData?.items" ></app-list>
+    </div>
+    <div class="tab-pane fade" id="companies" role="tabpanel" aria-labelledby="companies-tab">
+      <app-list type="companies" column1="Company" column2="People" [data]="companiesData?.items" ></app-list>
+    </div>
   </div>
 </div>
