--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<section>
+<section class="search">
   <div class="container">
-    <h2>{{ title }}</h2>
+    <h2 class="mb-4">{{ title }}</h2>
 
     <!-- Search input -->
     <app-search-input></app-search-input>
 
-    <!-- Initial result -->
+    <!-- Initial state -->
     <div *ngIf="hasRoute('/')"
        class="d-table text-center w-100 mt-5">
       <img class="mb-4" src="assets/img/search.svg"/>
