--- a/src/app/components/search-input/search-input.component.css
+++ b/src/app/components/search-input/search-input.component.css
@@ -1,16 +1,20 @@
+/* Search input */
 .search-span {
-  padding: 4px;
+  padding: 7px;
   border: 1px solid #dee2e6;
   border-radius: 0 0.25rem 0.25rem 0;
+  border-color: #AAB9C4;
 }
 
 .search-icon {
+  fill: #FEFEFE;
   height: 1rem;
+  width: 1rem;
 }
 
 .search-wrapper .search-img-wrapper{
   background-color: #BA10B5;
   border: none;
   border-radius: 0.15rem;
-  padding: 0.375rem 0.45rem;
+  padding: 0.375rem 0.5rem;
 }
