--- a/src/app/search-result/search-result.component.html
+++ b/src/app/search-result/search-result.component.html
@@ -1,23 +1,34 @@
-<div class="search-result-wrapper">
-  <ul class="nav nav-tabs" role="tablist">
+<!-- Search result -->
+<div class="search-result-wrapper mt-4">
+
+  <ul class="nav nav-tabs mb-4" role="tablist">
+    <!-- User tab -->
     <li class="nav-item" role="presentation">
       <a class="nav-link active" id="user-tab" data-toggle="tab" href="#user" role="tab" aria-controls="user" aria-selected="true">
         {{ 'Users' | uppercase }} ({{ userData?.total_count }})
       </a>
+      <div class="underline"></div>
     </li>
+
+    <!-- Companies tab -->
     <li class="nav-item" role="presentation">
       <a class="nav-link" id="companies-tab" data-toggle="tab" href="#companies" role="tab" aria-controls="companies" aria-selected="false">
         {{ 'Companies' | uppercase }} ({{ companiesData?.total_count }})
       </a>
+      <div class="underline"></div>
     </li>
   </ul>
 
   <div class="tab-content">
+    <!-- Users search result -->
     <div class="tab-pane fade show active" id="user" role="tabpanel" aria-labelledby="user-tab">
       <app-list type="users" column1="Users" column2="Contributions" [data]="userData?.items" ></app-list>
     </div>
+
+    <!-- Companies search result -->
     <div class="tab-pane fade" id="companies" role="tabpanel" aria-labelledby="companies-tab">
       <app-list type="companies" column1="Company" column2="People" [data]="companiesData?.items" ></app-list>
     </div>
   </div>
+
 </div>
