--- a/src/styles.css
+++ b/src/styles.css
@@ -11,11 +11,14 @@ h2 {
   font-size: 32px;
 }
 label {
+  font-size: 15px;
   font-weight: 600;
+  margin: 0;
 }
 input.form-control {
   height: 48px;
   font-weight: 400;
+  border-color: #AAB9C4;
 }
 
 input:focus,
