feat: Basic unit test

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <section class="search">
   <div class="container">
-    <h2 class="mb-4">{{ title }}</h2>
+    <h2 class="mb-4">Search for GitHub Users</h2>
 
     <!-- Search input -->
     <app-search-input></app-search-input>
