--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -8,11 +8,11 @@
 
     <!-- Code and name -->
     <div class="d-flex flex-column">
-      <label class="mb-0">{{ item.code }}</label>
-      <label class="subtitle">{{ item.name }}</label>
+      <label class="mb-0">{{ item?.code }}</label>
+      <label class="subtitle">{{ item?.name }}</label>
     </div>
   </div>
 
   <!-- Contributions -->
-  <label class="subtitle">{{ item.count }}</label>
+  <label class="subtitle">{{ item?.count }}</label>
 </div>
