--- a/src/app/components/search-input/search-input.component.css
+++ b/src/app/components/search-input/search-input.component.css
@@ -12,11 +12,10 @@
   width: 1rem;
 }
 
-.search-wrapper .search-img-wrapper{
+.search-wrapper .btn-pink{
   background-color: #BA10B5;
   border: none;
   border-radius: 0.15rem;
-  padding: 0.375rem 0.5rem;
 }
 
 .spinner-border {
