feat: Update bootstrap dependency for npm

--- a/src/app/components/users-list/users-list.component.html
+++ b/src/app/components/users-list/users-list.component.html
@@ -7,3 +7,5 @@
   [totalItems]="userData?.total_count"
   (showMore)="showMoreUsers()">
 </app-list>
+
+<p class="error" *ngIf="errorMsg">{{ errorMsg }}</p>
