--- a/src/app/components/search-input/search-input.component.css
+++ b/src/app/components/search-input/search-input.component.css
@@ -1,6 +1,6 @@
 /* Search input */
 .search-span {
-  padding: 7px;
+  padding: 0.48rem 0.4rem;
   border: 1px solid #dee2e6;
   border-radius: 0 0.25rem 0.25rem 0;
   border-color: #AAB9C4;
@@ -12,13 +12,25 @@
   width: 1rem;
 }
 
-.search-wrapper .btn-pink{
-  background-color: #BA10B5;
-  border: none;
-  border-radius: 0.15rem;
-}
-
 .spinner-border {
   height: 1rem;
   width: 1rem;
+}
+
+/* btn */
+.btn-pink {
+  background-color: rgb(186,16,181);
+  border: none;
+  border-radius: 0.15rem;
+}
+.btn-pink:hover {
+  background-color: rgba(186,16,181,0.8);
+}
+.btn-pink:disabled {
+  background-color: rgba(186,16,181,0.5);
+}
+
+.form-control:focus,
+.form-control:focus+ .input-group-append {
+  border-color: rgba(186,16,181,0.4);
 }
