--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 <section class="search">
   <div class="container">
+
+    <!-- Error alert -->
+    <div *ngIf="errorMsg" class="alert alert-danger" role="alert">
+      An error occurred, please try again later.
+    </div>
+
     <h2 class="mb-4">Search for GitHub Users</h2>
 
     <!-- Search input -->
