--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,29 @@
+<!-- Main section -->
 <section class="search">
   <div class="container">
+    <div class="row">
+        <div class="col-12 col-lg-10 offset-lg-1">
+          <!-- Error alert -->
+          <div *ngIf="errorMsg" class="alert alert-danger" role="alert">
+            An error occurred, please try again later.
+          </div>
 
-    <!-- Error alert -->
-    <div *ngIf="errorMsg" class="alert alert-danger" role="alert">
-      An error occurred, please try again later.
+          <!-- Title -->
+          <h2 class="mb-4">Search for GitHub Users</h2>
+
+          <!-- Search input -->
+          <app-search-input></app-search-input>
+
+          <!-- Initial state -->
+          <div *ngIf="hasRoute('/')"
+            class="d-table text-center w-100 mt-5">
+            <img class="mb-4" src="assets/img/search.svg"/>
+            <label class="d-block">Enter a login, name or a company your are looking for.</label>
+          </div>
+
+          <!-- App router -->
+          <router-outlet></router-outlet>
+        </div>
     </div>
-
-    <h2 class="mb-4">Search for GitHub Users</h2>
-
-    <!-- Search input -->
-    <app-search-input></app-search-input>
-
-    <!-- Initial state -->
-    <div *ngIf="hasRoute('/')"
-       class="d-table text-center w-100 mt-5">
-      <img class="mb-4" src="assets/img/search.svg"/>
-      <label class="d-block">Enter a login, name or a company your are looking for.</label>
-    </div>
-
-    <router-outlet></router-outlet>
   </div>
 </section>
