--- a/src/app/components/search-input/search-input.component.css
+++ b/src/app/components/search-input/search-input.component.css
@@ -1,6 +1,6 @@
 /* Search input */
 .search-span {
-  padding: 0.48rem 0.4rem;
+  padding: 0.3rem 0.4rem;
   border: 1px solid #dee2e6;
   border-radius: 0 0.25rem 0.25rem 0;
   border-color: #AAB9C4;
@@ -15,6 +15,9 @@
 .spinner-border {
   height: 1rem;
   width: 1rem;
+}
+.input-group>.input-group-append>.btn {
+  border-radius: 0.15rem;
 }
 
 /* btn */
